@@ -1,3 +1,7 @@
+2003-10-29  Paul Eggert  <eggert@twinsun.com>
+
+	* modules/group-member: Depend on stdbool.
+
 2003-10-20  Bruno Haible  <bruno@clisp.org>
 
 	* modules/wait-process: New file.
